# synql

./: .gitignore  Cargo.toml  README.md  cobertura.xml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
sql_relations/: Cargo.toml  README.md
sql_relations/src/: impls.rs  traits.rs
sql_relations/src/impls/: sqlparser.rs
sql_relations/src/traits/: authored.rs  most_concrete.rs  table_list_like.rs
sql_relations/src/traits/same_as/: same_as_index.rs  same_as_table.rs
sql_relations/src/traits/same_as/horizontal_same_as/: horizontal_same_as_column.rs  horizontal_same_as_foreign_key.rs  horizontal_same_as_table.rs
sql_relations/src/traits/same_as/triangular_same_as/: triangular_same_as_columns.rs  triangular_same_as_foreign_key.rs  triangular_same_as_table.rs
sql_relations/src/traits/same_as/vertical_same_as/: vertical_same_as_column.rs  vertical_same_as_foreign_key.rs  vertical_same_as_table.rs
synql/: Cargo.toml
synql/examples/: observable.rs  readme.rs
synql/src/: lib.rs  structs.rs  utils.rs
synql/src/structs/: errors.rs  external_crate.rs  external_function.rs  external_function_ref.rs  external_type.rs  external_type_ref.rs  synql.rs  toml_dependency.rs  workspace.rs
synql/src/structs/external_crate/: builder.rs  chrono_crate.rs  core_crate.rs  diesel_builders.rs  diesel_crate.rs  pgrx_validation.rs  postgis_diesel_crate.rs  rosetta_timestamp.rs  rosetta_utc.rs  rosetta_uuid_crate.rs  serde.rs  serde_json.rs  std_crate.rs  validation_errors.rs
synql/src/structs/external_crate/core_crate/: numeric.rs
synql/src/structs/external_type/: builder.rs
synql/src/structs/synql/: builder.rs  write_crate_lib.rs  write_crate_toml.rs  write_sink_crate_lib.rs  write_sink_crate_toml.rs
synql/src/structs/workspace/: builder.rs  core_types.rs
synql/src/traits/: check_constraint.rs  column.rs  foreign_key.rs  function.rs  synql_database_like.rs  table.rs  unique_index.rs
synql/src/traits/check_constraint/: sub_expressions.rs  translate_expression.rs
synql/src/utils/: is_reserved_rust_word.rs
synql/tests/: test_aps.rs  test_callback.rs  test_dag_sink_generation.rs  test_excessive_booleans.rs  test_mandatory_triangular_same_as.rs  test_multi_column_check_constraint.rs  test_struct_field_names_allow.rs  test_table_list_like.rs  test_workspace_generation.rs
synql/tests/snapshots/: test_emi_generation__synql_workspace.snap
