[workspace]
resolver = "2"
members = ["synql", "sql_relations"]

[workspace.dependencies]
sql-traits = {git = "https://github.com/earth-metabolome-initiative/sql-traits", branch = "main" }
sql-rules = { git = "https://github.com/earth-metabolome-initiative/sql-rules", branch = "main" }
sql_relations = { path = "sql_relations" }
syn = { version = "2.0", features = ["full", "visit-mut", "extra-traits"] }
chrono = { version = "0.4.39", features = ["serde"] }
time_requirements = "0.1.0"
sqlparser = "0.60"
quote = "1.0"
proc-macro2 = "1.0"
cached = { version = "0.56" }
inflection-rs = {git = "https://github.com/LucaCappelletti94/inflection-rs", branch = "main"}
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
thiserror = "2.0"
heck = "0.5"
enumflags2 = "0.7.12"

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[workspace.lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
